update libraries, apps

--- a/apps/micro_react/src/app/app.module.css
+++ b/apps/micro_react/src/app/app.module.css
@@ -2,6 +2,6 @@
 .app_wrapper {
   text-align: center;
   margin: auto;
-  background-color: rgb(216, 239, 206);
-  padding: 2rem;
+  background-color: blanchedalmond;
+  padding: 1rem;
 }
