add fetch hook with graphql,add characters,fix micro_react webpackConfig,update micro_react app

--- a/libs/common-ui/src/lib/common-ui.module.css
+++ b/libs/common-ui/src/lib/common-ui.module.css
@@ -1,7 +1,4 @@
-/*
- * Replace this with your own classes
- *
- * e.g.
- * .container {
- * }
-*/
+.characters {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
