--- a/apps/shell/src/app/app.module.css
+++ b/apps/shell/src/app/app.module.css
@@ -1,1 +1,7 @@
-/* Your styles goes here. */
+.nav {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  max-width: 80%;
+  margin: 1rem auto;
+}
